# ForSale

./: .gitignore  Cargo.toml  LICENSE
auction_game/: Cargo.toml
auction_game/src/: lib.rs
auction_game/src/engines/: constants.rs  traits.rs  utils.rs
auction_game/src/engines/algorithms/: counterfactual_regret.rs  maxn_player.rs
auction_game/src/engines/controllers/: counterfactual_regret.rs  greedy_baby.rs  maxn_player.rs  maxn_player_multi.rs  minimax.rs  random_player.rs  terminal_player.rs
auction_game/src/engines/q_values/: regret.rs
auction_game/src/engines/scorers/: naive_round_score.rs
auction_game/src/engines/strategies/: average.rs
auction_game/src/game_modes/: play_with_bots.rs  self_play.rs  standard.rs  traits.rs
auction_game/src/helper/: generation.rs
auction_game/src/models/: constants.rs  enums.rs  game_state.rs  state.rs
auction_game/src/modes/: random_game.rs  traits.rs
auction_game/src/modes/controllers/: random_player.rs
helper/: Cargo.toml
helper/src/: generation.rs  lib.rs  logger.rs
logs/: rand_game  random_game  random_game_old  test_maximax
