[package]
name = "auction_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
rand = { workspace = true }
helper = { path = "../helper" }
log = "0.4.22"

[[bin]]
name = "random_game"
path = "src/bin/random_game.rs"

[[bin]]
name = "test_maximax"
path = "src/bin/test_maximax.rs"